# Voxelizer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  asan.supp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  fdd-feature.md  improvement-task.md  job-story.md
.github/workflows/: build.yml  coverage.yml  linting.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  StaticAnalyzers.cmake  VcpkgDependencies.cmake
docs/: VoxelRenderingGeneral.md
resources/shaders/: camera.vert  voxelDDA_frag.slang  voxelDDA_normals.frag  voxelDDA_simple.frag  voxelDDA_simple.vert  voxelDDA_vert.slang
scripts/: coverage.py
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: Assertions.hpp  Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Viewport.hpp
src/engine/voxels/: IVoxelStorage.hpp  Voxel.hpp  VoxelGrid.cpp  VoxelGrid.hpp
src/test/: CMakeLists.txt  labelTests.cmake
src/test/core/: ShaderTest.cpp  TextureTest.cpp
src/test/fixtures/: OpenGLTestFixture.hpp
src/test/testUtility/: RandomNumberGenerator.hpp  ResourceGenerator.hpp
vcpkg-ports/glad2cmake/: portfile.cmake  vcpkg.json
